Added auto-gen for swagger docs creation to /api-docs endpoint
